--- a/index.html
+++ b/index.html
@@ -720,16 +720,16 @@ Zögern Sie nicht und vereinbaren Sie gleich einen persönlichen Termin unter de
 				<div class="pad30"></div>
 				<!--1-->
 					<div class="col-sm-3 col-lg-3">
-						<img src="img/clients/client1.png" class="center fadeit" alt="" /></div>	
+						<a href ="http://www.milon.de"><img src="img/clients/client1.png" class="center fadeit" alt="" /></div></a>	
 				<!--2-->
 					<div class="col-sm-3 col-lg-3 center">
-						<img src="img/clients/client2.png" class="center fadeit" alt="" /></div>	
+						<a href ="http://www.milon.de"><img src="img/clients/client2.png" class="center fadeit" alt="" /></div></a>	
 				<!--3-->
 					<div class="col-sm-3 col-lg-3 center">
-						<img src="img/clients/client3.png" class="center fadeit" alt="" /></div>	
+						<a href ="http://www.milon.de"><img src="img/clients/client3.png" class="center fadeit" alt="" /></div></a>	
 				<!--4-->
 					<div class="col-sm-3 col-lg-3">
-						<img src="img/clients/client2.png" class="center fadeit" alt="" /></div>	
+						<a href ="http://www.milon.de"><img src="img/clients/client4.png" class="center fadeit" alt="" /></div></a>	
 					</div>
 				</div>
 			<div class="pad30"></div>
