PAar Bilder reingehauen

--- a/index.html
+++ b/index.html
@@ -516,29 +516,33 @@ Zögern Sie nicht und vereinbaren Sie gleich einen persönlichen Termin unter de
         </div>
       <!-- 2-->
         <div class="box" data-category="Illustration">
-            <div data-thumbnail="img/gallery/Illustrations/thumbnails/illustration1.jpg"></div>
-			<div data-image="img/gallery/Illustrations/illustration1.jpg"></div>
+            <div data-thumbnail="img/gallery/Design/thumbnails/demo2.jpg"></div>
+			<div data-image="img/gallery/Design/demo2.jpg"></div>
+			<div data-clearimage="img/gallery/Design/thumbnails/demo2_clear.jpg"></div>
 			<div class="thumbnail-caption"></div>
 			<div class="lightbox-text">  <span> </span></div>
         </div>
       <!-- 3-->
         <div class="box" data-category="Photography">
-            <div data-thumbnail="img/gallery/Photography/thumbnails/photography1.jpg"></div>
-			<div data-image="img/gallery/Photography/photography1.jpg"></div>
+            <div data-thumbnail="img/gallery/Design/thumbnails/demo1.jpg"></div>
+			<div data-image="img/gallery/Design/demo1.jpg"></div>
+			<div data-clearimage="img/gallery/Design/thumbnails/demo1_clear.jpg"></div>
 			<div class="thumbnail-caption"></div>
 			<div class="lightbox-text"> <span></span></div>
         </div>
 	  <!-- 4-->
 		<div class="box" data-category="Illustration">
-			<div data-thumbnail="img/gallery/Illustrations/thumbnails/illustration2.jpg"></div>
-			<div data-image="img/gallery/Illustrations/illustration2.jpg"></div>
+            <div data-thumbnail="img/gallery/Design/thumbnails/demo2.jpg"></div>
+			<div data-image="img/gallery/Design/demo2.jpg"></div>
+			<div data-clearimage="img/gallery/Design/thumbnails/demo2_clear.jpg"></div>
 			<div class="thumbnail-caption"></div>
 			<div class="lightbox-text"> <span></span></div>
         </div>
       <!-- 5-->
 		<div class="box" data-category="Photography">
-            <div data-thumbnail="img/gallery/Photography/thumbnails/photography2.jpg"></div>
-			<div data-image="img/gallery/Photography/photography2.jpg"></div>
+            <div data-thumbnail="img/gallery/Design/thumbnails/demo1.jpg"></div>
+			<div data-image="img/gallery/Design/demo1.jpg"></div>
+			<div data-clearimage="img/gallery/Design/thumbnails/demo1_clear.jpg"></div>
 			<div class="thumbnail-caption"></div>
 			<div class="lightbox-text"><span></span></div>
         </div>
